# hefest-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  HANDOFF_HEF43_PUSH.md  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
hefest/: config.py  logging.py  main.py  redis.py
hefest/middleware/: rate_limit.py
hefest/models/: __init__.py  device.py  event.py  notification.py  notification_job.py  notification_log.py  oauth_identity.py  refresh_token.py  registration.py  user.py
hefest/routers/: __init__.py  auth.py  deps.py  device.py  events.py  internal.py  notification_jobs.py  notifications.py  registrations.py  sso.py  stats.py
hefest/schemas/: __init__.py  auth.py  device.py  event.py  notification.py  notification_job.py  registration.py  stats.py
hefest/services/: auth.py  device.py  event.py  notifications.py  registration.py  stats.py
hefest/worker/: __main__.py  claim.py  consumer.py  errors.py  heartbeat.py  mailer.py  push_templates.py  pusher.py  recipients.py  relay.py  templates.py
migrations/: 0001_initial.py  0002_auto_20260618_2240.py  0002_relay_notify_trigger.py  0003_auto_20260619_1539.py  0004_relay_notify_trigger.py  0005_waitlist_fifo_index_add_id.py  0006_notification_jobs_outbox_delivery.py  0006_refresh_token_client.py  0007_device.py  0007_notification_jobs_nullable_event.py  0008_notification_jobs_nullable_event.py  0009_notifications.py
scripts/: ci_check_migrations.py  seed.py  seed_events.py
tests/: conftest.py  test_auth_client.py  test_config.py  test_e2e_staging.py  test_notifications_router.py  test_rate_limit.py  test_register_enqueue.py  test_relay.py  test_services_auth.py  test_services_device.py  test_services_events.py  test_services_registration.py  test_services_registration_lists.py  test_services_stats.py  test_sso_client_routing.py  test_users_profile.py  test_worker_claim.py  test_worker_consumer.py  test_worker_heartbeat.py  test_worker_integration.py  test_worker_mailer.py  test_worker_recipients.py  test_worker_templates.py
