[project]
name = "hefest-api"
version = "0.1.0"
description = "School Events & Notification Center — Hefest API"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.31.0",
    "fastapi[standard]==0.137.1",
    "fastapi-sso==0.21.0",
    "loguru==0.7.3",
    "bcrypt==5.0.0",
    "pydantic-settings==2.14.1",
    "pyjwt[crypto]==2.13.0",
    "redis==8.0.0",
    "tortoise-orm==1.1.7",
    "orjson==3.11.9",
    "aiosmtplib==5.1.2",
]

[dependency-groups]
dev = [
    "fakeredis[lua]==2.36.2",
    "httpx==0.28.1",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.17",
    "testcontainers[postgres]>=4.14.2",
    "ty==0.0.49",
]

[tool.ruff]
line-length = 88
target-version = "py312"
# Generated migrations contain long raw-SQL strings; lint/format them like ty skips them.
extend-exclude = ["migrations", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: needs a real database (provided via testcontainers); run as a separate CI job",
]

[tool.ty.src]
exclude = ["migrations"]

[tool.tortoise-orm]
connections.default = "asyncpg://hefest:hefest@localhost:5432/hefest_db"

[tool.tortoise-orm.apps.models]
models = ["hefest.models"]
default_connection = "default"
migrations = "migrations"
